--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -1,3 +1,3 @@
 {
-    "helloWorld": "Hello World!"
+    "beforeYouBegin": "Before you begin, you must adjust\n system settings. Please touch the\n Touch Screen or press any button."
 }
