--- a/assets/l10n/intl_es.arb
+++ b/assets/l10n/intl_es.arb
@@ -1,3 +1,3 @@
 {
-    "helloWorld": "¡Hola Mundo!"
+    "beforeYouBegin":  "Antes de empezar, ajusta la configuración del sistema. Por favor, toque la pantalla táctil o pulse cualquier botón."
 }
