feat: Style selected color container

--- a/assets/l10n/intl_de.arb
+++ b/assets/l10n/intl_de.arb
@@ -1,3 +1,4 @@
 {
-    "beforeYouBegin": "Bevor du startest, musst du deine Systemeinstellungen anpassen. Bitte drücke auf den Touch Screen."
+  "beforeYouBegin": "Bevor du startest, musst du deine Systemeinstellungen anpassen. Bitte drücke auf den Touch Screen.",
+  "chooseColor": "Wähle Farbe"
 }
