--- a/assets/l10n/intl_ja.arb
+++ b/assets/l10n/intl_ja.arb
@@ -1,3 +1,4 @@
 {
-    "beforeYouBegin": "始める前に、システム設定を調整する必要があります。タッチスクリーンをタッチするか、いずれかのボタンを押してください"
+  "beforeYouBegin": "始める前に、システム設定を調整する必要があります。タッチスクリーンをタッチするか、いずれかのボタンを押してください",
+  "chooseColor": "色を選んで"
 }
