--- a/assets/l10n/intl_pt.arb
+++ b/assets/l10n/intl_pt.arb
@@ -1,4 +1,9 @@
 {
   "beforeYouBegin": "Antes de começar, você deve ajustar as configurações do sistema. Por favor, toque na tela de toque ou pressione qualquer botão.",
-  "chooseColor": "Escohle uma cor"
+  "chooseColor": "Escohle uma cor",
+  "erase": "Apagar",
+  "input": "Inserir",
+  "username": "Nome",
+  "goBack": "Voltar",
+  "select": "Selecionar"
 }
