--- a/assets/l10n/intl_ja.arb
+++ b/assets/l10n/intl_ja.arb
@@ -1,9 +1,10 @@
 {
   "beforeYouBegin": "始める前に、システム設定を調整する必要があります。タッチスクリーンをタッチするか、いずれかのボタンを押してください",
-  "chooseColor": "色を選んで",
+  "chooseColor": "色を選ぶ",
   "erase": "消す",
   "input": "入力する",
   "username": "ユーザーネーム",
   "goBack": "戻る",
-  "select": "選択する"
+  "select": "選択する",
+  "pleaseEnterName": "ユーザーネームを入力"
 }
