--- a/assets/l10n/intl_pt.arb
+++ b/assets/l10n/intl_pt.arb
@@ -5,5 +5,6 @@
   "input": "Inserir",
   "username": "Nome",
   "goBack": "Voltar",
-  "select": "Selecionar"
+  "select": "Selecionar",
+  "pleaseEnterName": "Insera um nome por favor"
 }
