--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -5,5 +5,6 @@
   "input": "Input",
   "username": "Username",
   "goBack": "Go back",
-  "select": "Select"
+  "select": "Select",
+  "pleaseEnterName": "Please enter an username"
 }
