feat: Create basic home screen

--- a/assets/l10n/intl_de.arb
+++ b/assets/l10n/intl_de.arb
@@ -6,5 +6,7 @@
   "username": "Nutzername",
   "goBack": "Zurück",
   "select": "Auswählen",
-  "pleaseEnterName": "Bitte gebe einen Nutzernamen ein"
+  "pleaseEnterName": "Bitte gebe einen Nutzernamen ein",
+  "settings": "Einstellungen",
+  "join": "Beitreten"
 }
