--- a/assets/l10n/intl_es.arb
+++ b/assets/l10n/intl_es.arb
@@ -6,5 +6,7 @@
   "username": "Nombre",
   "goBack": "Volver",
   "select": "Seleccionar",
-  "pleaseEnterName": "Por favor ingresa un nombre"
+  "pleaseEnterName": "Por favor ingresa un nombre",
+  "settings": "Configuración",
+  "join": "Entrar"
 }
