--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -6,5 +6,7 @@
   "username": "Username",
   "goBack": "Go back",
   "select": "Select",
-  "pleaseEnterName": "Please enter an username"
+  "pleaseEnterName": "Please enter an username",
+  "settings": "Settings",
+  "join": "Join"
 }
