--- a/assets/l10n/intl_ja.arb
+++ b/assets/l10n/intl_ja.arb
@@ -5,6 +5,8 @@
   "input": "入力する",
   "username": "ユーザーネーム",
   "goBack": "戻る",
-  "select": "選択する",
-  "pleaseEnterName": "ユーザーネームを入力"
+  "select": "選ぶ",
+  "pleaseEnterName": "ユーザーネームを入力する",
+  "settings": "設定",
+  "join": "入る"
 }
